--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ html {
 .text-spacing {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 40px;
 }
 
 .uppercase {
@@ -59,13 +59,20 @@ html {
 header {
   width: 100%;
   background-color: #ffc5ae;
-  padding: 10px 0;
+  padding: 10px 130px;
+  display: flex;
+  justify-content: space-between;
 }
 
 header h1 {
   color: white;
   width: 136px;
-  margin: auto;
+}
+
+.header__nav {
+  display: flex;
+  gap: 50px;
+  align-self: center;
 }
 
 .main-description {
@@ -77,7 +84,7 @@ header h1 {
   padding: 190px 0;
   background-color: #ffc5ae;
   border-radius: 230px 0 230px 0;
-  margin-top: 220px;
+  margin-top: 250px;
 }
 
 .main-description__text span {
@@ -87,7 +94,7 @@ header h1 {
 
 .main-description__img {
   position: absolute;
-  top: -138px;
+  top: -298px;
   right: 0;
 }
 
@@ -98,33 +105,38 @@ header h1 {
 
 .starbar-description__text {
   position: absolute;
-  top: 958px;
+  top: 946px;
+  right: 0;
+  height: 621px;
   z-index: -10;
   width: 92%;
-  padding: 293px 0;
+  /* padding: 293px 0; */
   background-color: #cacf93;
   border-radius: 0 340px 0 340px;
 }
 
 .starbar-description__img {
-    margin-left: 100px;
+    margin-left: 44px;
+    margin-top: 250px;
 }
 
 .starbar-description__text h2 {
   font-weight: 600;
-  margin-left: 110px;
+  margin-left: 660px;
+  margin-top: 193px;
   font-size: 40px;
 }
 
 .starbar-description__text span {
   font-size: 25px;
-  margin-left: 110px;
+  margin-left: 660px;
   width: 48%;
 }
 
 .aromas {
   display: flex;
   justify-content: space-between;
+  margin-top: 200px;
 }
 
 .aromas__green {
@@ -148,8 +160,8 @@ header h1 {
 .aromas__grass__text {
   width: 888px;
   background-color: #cacf93;
-  padding: 180px 40px 210px 497px;
-  border-radius: 240px 0 240px 0;
+  padding: 180px 40px 260px 497px;
+  border-radius: 260px 0 260px 0;
 }
 
 .aromas__grass__text h5,
@@ -178,7 +190,7 @@ header h1 {
 
 .aromas__berry__img {
   position: absolute;
-  top: 100px;
+  top: 55px;
 }
 
 .aromas__description {
@@ -186,7 +198,7 @@ header h1 {
 }
 
 .aromas__flower {
-  margin-top: 184px;
+  margin-top: 240px;
   margin-left: -200px;
 }
 
@@ -211,7 +223,7 @@ header h1 {
 
 .collection__title {
   width: 243px;
-  margin: 250px 0 200px 75vw;
+  margin: 200px 0 200px 75vw;
 }
 
 .collection__elder__text,
@@ -230,8 +242,7 @@ header h1 {
   border-radius: 240px 0;
 }
 
-.collection__elder__img,
-.collection__raspberries__img {
+.collection__elder__img {
   position: absolute;
   top: -20px;
   right: 0;
@@ -243,11 +254,11 @@ header h1 {
 
 .collection__sage__text {
   background-color: #cacf93;
-  padding: 132px 132px 132px 0;
+  padding: 140px 132px 160px 0;
   align-items: end;
   margin-left: auto;
   border-radius: 0 240px;
-  margin-top: 500px;
+  margin-top: 410px;
 }
 
 .collection__sage__text h5,
@@ -261,11 +272,16 @@ header h1 {
 }
 
 .collection__raspberries {
-  margin-top: 500px;
+  margin-top: 450px;
 }
 
 .collection__raspberries__text {
   border-radius: 0 240px;
+}
+.collection__raspberries__img {
+  position: absolute;
+  top: -50px;
+  right: 0;
 }
 
 .collection__raspberries__text span {
@@ -273,15 +289,15 @@ header h1 {
 }
 
 .all-tastes {
-    margin-top: 900px;
-    height: 900px;
+    margin-top: 719px;
+    height: 813px;
 }
 
 .all-tastes__text {
     float: right;
     width: 91%;
     background-color: #CACF93;
-    padding: 431px 0 70px 70px;
+    padding: 431px 0 100px 120px;
     border-radius: 300px 0 300px 0;
 }
 
@@ -291,7 +307,7 @@ header h1 {
 
 .all-tastes__img {
     position: absolute;
-    top: -550px;
+    top: -598px;
     left: 0;
     width: 100%;
 }
@@ -377,12 +393,54 @@ header h1 {
     left: 70px;
 }
 
+.contacts {
+  margin: 100px 0 200px 0;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 127px;
+}
+
+.contacts__text {
+  background-color: #CACF93;
+  width: 64%;
+  padding: 139px 0 139px 350px;
+  border-radius: 0 240px 0 240px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.border-bottom {
+  border-bottom: 2px solid #3d3830;
+}
+
+.contacts__text h5 {
+  position: relative;
+  margin-left: 40px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.contacts__text h5::after {
+  position: absolute;
+  content: '.';
+  top: -16px;
+  left: -26px;
+  font-size: 35px;
+}
+
 footer {
     width: 100%;
     background-color: #FFB79A;
-    padding: 46px 65px 100px 100px;
+    padding: 46px 65px 55px 100px;
     display: flex;
     justify-content: space-between;
+}
+
+.footer__logo-and-copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .footer__logo {
@@ -392,10 +450,15 @@ footer {
     width: 200px;
 }
 
+.footer__copyright {
+  font-size: 14px;
+  color: white;
+}
+
 .footer__nav-and-contacts {
     display: flex;
     flex-direction: column;
-    gap: 100px;
+    gap: 130px;
 }
 
 .footer__nav {
@@ -403,7 +466,7 @@ footer {
     gap: 60px;
 }
 
-.footer__nav a {
+.footer__nav a, .header__nav a {
     color: white;
     font-size: 20px;
     font-weight: 900;
